# remind-utils

./: .gitignore  Cargo.toml  LICENSE  TODO.norg  default.nix  flake.nix  justfile  remind-stuff.cabal
src/: Ical2Remind.hs  lib.rs  main.rs  properties.rs
