cabal-version:      3.0
name:               remind-stuff
version:            0.0.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Akshay Nair
maintainer:         phenax5@gmail.com
-- copyright:
category:           Tool
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ical2Remind
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable remind-stuff
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        remind-stuff

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite remind-stuff-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        remind-stuff
